--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
+    <groupId>com.abidi</groupId>
     <artifactId>offheap-marketdata-queue</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -33,6 +33,11 @@
             <version>0.10</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.abidi</groupId>
+            <artifactId>offheap-shared-batched-buffer</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>net.openhft</groupId>
@@ -56,6 +61,12 @@
             <artifactId>junit</artifactId>
             <version>RELEASE</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>offheap-shared-batched-buffer</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
