pre prod release

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
     <groupId>com.abidi</groupId>
     <artifactId>offheap-marketdata-queue</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <scm>
+        <developerConnection>scm:git:ssh://git@github.com:syedabbasabidi/offheap-marketdata-queue.git</developerConnection>
+        <url>https://github.com/syedabbasabidi/offheap-marketdata-queue.git</url>
+    </scm>
 
     <build>
         <plugins>
