--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.abidi</groupId>
     <artifactId>offheap-marketdata-queue</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1</version>
     <scm>
         <developerConnection>scm:git:ssh://git@github.com:syedabbasabidi/offheap-marketdata-queue.git</developerConnection>
         <url>https://github.com/syedabbasabidi/offheap-marketdata-queue.git</url>
-    </scm>
+      <tag>offheap-marketdata-queue-0.1</tag>
+  </scm>
 
     <build>
         <plugins>
