--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 
     <groupId>com.abidi</groupId>
     <artifactId>offheap-marketdata-queue</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <scm>
         <developerConnection>scm:git:git://github.com:syedabbasabidi:offheap-marketdata-queue.git</developerConnection>
         <url>https://github.com/syedabbasabidi/offheap-marketdata-queue.git</url>
-      <tag>offheap-marketdata-queue-0.1</tag>
+      <tag>offheap-marketdata-queue-1.0</tag>
   </scm>
 
     <build>
