--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,7 @@
     <artifactId>offheap-marketdata-queue</artifactId>
     <version>1.0</version>
     <scm>
-        <developerConnection>scm:git:git://github.com:syedabbasabidi:offheap-marketdata-queue.git</developerConnection>
-        <url>https://github.com/syedabbasabidi/offheap-marketdata-queue.git</url>
+        <developerConnection>scm:git:git://github.com/syedabbasabidi/offheap-marketdata-queue.git</developerConnection>
       <tag>offheap-marketdata-queue-1.0</tag>
   </scm>
 
