--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.abidi</groupId>
     <artifactId>offheap-marketdata-queue</artifactId>
-    <version>1.0</version>
+    <version>1.0-SNAPSHOT</version>
     <scm>
         <developerConnection>scm:git:git://github.com/syedabbasabidi/offheap-marketdata-queue.git</developerConnection>
       <tag>offheap-marketdata-queue-1.0</tag>
